2005-08-27  Nathaniel Smith  <njs@pobox.com>

	* commands.cc (checkout): Special-case "checkout ."
	* tests/t_checkout_dir.at: Test it.

2005-08-26  Nathaniel Smith  <njs@pobox.com>

	* file_io.hh: Remove comment describing old path types.
	* paths.hh: Add comment describing new path types.
	
2005-08-26  Nathaniel Smith  <njs@pobox.com>

	* app_state.cc (create_working_copy): Remove
	fs::filesystem_exception catching.
	* file_io.hh (mkdir_p): Remove comment noting app_state.cc's
	dependence on a boost-based implementation.

2005-08-26  Nathaniel Smith  <njs@pobox.com>

	* paths.cc: Include <string>.  Helps build on g++ 3.3?

2005-08-26  Nathaniel Smith  <njs@pobox.com>

	* commands.cc (get_log_message): Make the log message commentary a
	little more descriptive for people who may not know what a log
	message is...
	(commit): When canceling a commit due to empty log message, say
	so.

2005-08-26  Nathaniel Smith  <njs@pobox.com>

	* std_hooks.lua: Check for both "vi" and "notepad.exe" as fallback
	editors.  If no editor was found, print a helpful message instead
	of just running "vi" anyway.  Print a message if the editor exited
	with error.

2005-08-26  Nathaniel Smith  <njs@pobox.com>

	* file_io.cc (mkdir_p, make_dir_for): Increase error checking.
	* commands.cc (checkout): Make sure that checkout target directory
	does not already exist.  Also use system_path more uniformly.
	* tests/t_checkout_dir.at: Test.
	* tests/t_setup_existing_path.at: New test.

2005-08-26  Nathaniel Smith  <njs@pobox.com>

	* commands.cc (read): Optionally take files on command line.
	* tests/t_read_from_file.at, testsuite.at: New test.
	* monotone.texi (Network Service): Show Jim using this.
	(Packet I/O, Commands): Document.
	* monotone.1: Likewise.

2005-08-26  Nathaniel Smith  <njs@pobox.com>

	* change_set.cc (move_files_from_tmp_top_down): Typo again.
	
2005-08-26  Nathaniel Smith  <njs@pobox.com>
	
	* database.cc (open): Convert stray line to paths.cc.
